--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>This Is umme salma </h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic aut illum vero dolore minus vitae quas placeat voluptatum atque mollitia? Nam esse ea debitis odit. Expedita deserunt nam optio sunt.</p>
+    <p>eida ami kore disi</p>
+    <h3>heading o ami korsi</h3>
 </body>
 </html>
